--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="content">
     <h1 style="text-align: center;">Jason Luckow's Tasks</h1>
-    <a href="https://github.com/JasonLuckow">My Github</a>
+    <a style="text-align: center;" href="https://github.com/JasonLuckow">My Github</a>
     {% if tasks|length < 1 %}
         <h4 style="text-align: center;">There are no tasks. Create one below!</h4>
     {% else %}
